.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:18:58 **** Incremental Build of configuration Debug for project 04EjercicioClase4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase4.o "..\\EjercicioClase4.c" 
gcc -o 04EjercicioClase4.exe EjercicioClase4.o 
Info: Nothing to build for 04EjercicioClase4
11:51:46 **** Incremental Build of configuration Debug for project 04EjercicioClase4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase4.o "..\\EjercicioClase4.c" 
..\EjercicioClase4.c:21:1: error: unknown type name 'Bool'
 Bool equals (char* string1, char* string2){
 ^~~~
..\EjercicioClase4.c: In function 'main':
..\EjercicioClase4.c:40:19: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  char myString1 = "Hola Mundo";
                   ^~~~~~~~~~~~
..\EjercicioClase4.c:41:19: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  char myString2 = "Hola Mundo";
                   ^~~~~~~~~~~~
..\EjercicioClase4.c:42:22: warning: passing argument 1 of 'equals' makes pointer from integer without a cast [-Wint-conversion]
  printf("%c", equals(myString1, myString2));
                      ^~~~~~~~~
..\EjercicioClase4.c:21:6: note: expected 'char *' but argument is of type 'char'
 Bool equals (char* string1, char* string2){
      ^~~~~~
..\EjercicioClase4.c:42:33: warning: passing argument 2 of 'equals' makes pointer from integer without a cast [-Wint-conversion]
  printf("%c", equals(myString1, myString2));
                                 ^~~~~~~~~
..\EjercicioClase4.c:21:6: note: expected 'char *' but argument is of type 'char'
 Bool equals (char* string1, char* string2){
      ^~~~~~
11:53:15 **** Incremental Build of configuration Debug for project 04EjercicioClase4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase4.o "..\\EjercicioClase4.c" 
..\EjercicioClase4.c: In function 'main':
..\EjercicioClase4.c:41:19: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  char myString1 = "Hola Mundo";
                   ^~~~~~~~~~~~
..\EjercicioClase4.c:42:19: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  char myString2 = "Hola Mundo";
                   ^~~~~~~~~~~~
..\EjercicioClase4.c:43:22: warning: passing argument 1 of 'equals' makes pointer from integer without a cast [-Wint-conversion]
  printf("%c", equals(myString1, myString2));
                      ^~~~~~~~~
..\EjercicioClase4.c:21:6: note: expected 'char *' but argument is of type 'char'
 Bool equals (char* string1, char* string2){
      ^~~~~~
..\EjercicioClase4.c:43:33: warning: passing argument 2 of 'equals' makes pointer from integer without a cast [-Wint-conversion]
  printf("%c", equals(myString1, myString2));
                                 ^~~~~~~~~
..\EjercicioClase4.c:21:6: note: expected 'char *' but argument is of type 'char'
 Bool equals (char* string1, char* string2){
      ^~~~~~
gcc -o 04EjercicioClase4.exe EjercicioClase4.o 
Info: Nothing to build for 04EjercicioClase4
